@@ -22,13 +22,29 @@ dependencies {
   implementation 'cn.taketoday:infra-starter-freemarker'
   implementation 'eu.bitwalker:UserAgentUtils:1.21'
   implementation 'com.mysql:mysql-connector-j'
-  implementation 'com.aliyun.oss:aliyun-sdk-oss:3.18.4'
+  implementation ('com.aliyun.oss:aliyun-sdk-oss:3.18.4' ){
+    exclude group: "javax.xml.bind"
+    exclude group: "jakarta.xml.bind"
+    exclude group: "org.glassfish.jaxb"
+  }
+
 
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
   implementation 'ch.qos.logback:logback-classic'
   implementation 'com.github.ben-manes.caffeine:caffeine'
+  implementation("io.netty:netty-transport-native-kqueue") {
+    artifact {
+      classifier = 'osx-aarch_64'
+    }
+  }
+//
+//  implementation('io.netty:netty-transport-native-epoll') {
+//    artifact {
+//      classifier = 'linux-x86_64'
+//    }
+//  }
 
   annotationProcessor "cn.taketoday:infra-configuration-processor"
   annotationProcessor "cn.taketoday:infra-annotation-config-processor"
@@ -52,6 +68,7 @@ application {
       "--add-opens=java.base/java.nio=ALL-UNNAMED",
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
 //      "-Dinfra.profiles.active=prod",
+      "--enable-native-access=ALL-UNNAMED",
       "-Dio.netty.leakDetection.level=disabled",
       "-Xms512M",
       "-Xmx512M"
